--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3708,6 +3708,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Lao National Chamber of Commerce and Industry</td>
+      <td>老挝国家工商会</td>
+      <td>Chongqing Commission of Commerce</td>
+      <td>重庆市商务委</td>
+      <td>Laos</td>
+      <td>Arts and Culture, International Relations/Exchange, Trade/Industry Association</td>
+      <td>Chongqing</td>
+      <td>2021-04-08</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Le Comité d'Echanges Franco-Chinois (CEFC)</td>
       <td>法国巴黎大区工商会</td>
       <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
