--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1926,6 +1926,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>France-China Association to Promote Trade Enterprises and Science and Technology Innovation</td>
+      <td>法中经贸企业和科技创新促进会</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>France</td>
+      <td>International Relations/Exchange, Science and Technology, Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-04-15</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hubei, Hunan, Jiangsu, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Fred Hollows Foundation</td>
       <td>弗雷德·霍洛基金会</td>
       <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
