--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -27,6 +27,19 @@ text-align:center;
 vertical-align: text-top;
 }
 
+#subhed
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 13px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-style: italic;
+margin-left:15px;
+margin-right:15px;
+text-align:center;
+vertical-align: text-top;
+}
+
 #chart {
 text-align:center;
 font-size: 12px;
@@ -61,7 +74,7 @@ top:-80px; */
 <body>
 
 	<div id="wrapper">
-	<div id="header"><h1>Number of Individuals Arrested and Charged under the Main NSL Provisions</h1></div>
+	<div id="header"><h1>Number of Individuals Arrested and/or Charged, by Type of NSL Provision</h1></div>
   <div id="chart"></div>
   </div>
 
@@ -193,6 +206,6 @@ d3.csv("NSL_categories_group.csv", function(error, data) {
 
 d3.select("#chart").append("div")
     .attr("class", "footnote")
-    .html("<em>The Tong Ying-kit case is counted twice in this chart because it involves both the secession and terrorism provisions.</em>");
+    .html("<em>Tong Ying-kit is counted twice in this chart because he was charged under both the secession and terrorism provisions.</em>");
 
 </script>
