--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -15,7 +15,8 @@ body {
 
 <body>
 	<div id="wrapper">
-	<div id="header"><h1>Stated Grounds for Arrest</h1></div>
+	<div id="h1"><h1>Stated Grounds for Arrest</h1></div>
+	<div id="subhed">Individuals arrested for violating the NSL, individuals arrested by the NSD without invocation of the NSL, and individuals arrested for both NSL and non-NSL violations</div>
   <div id="venn"></div>
 	</div>
 </body>
@@ -36,7 +37,7 @@ margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
 }
-#header
+#h1
 {
 overflow:hidden;
 max-width: 100%;
@@ -46,12 +47,26 @@ font-family: Georgia, Times, "Times New Roman", serif;
 text-align:center;
 vertical-align: text-top;
 }
+
+#subhed
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 13px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-style: italic;
+margin-left:15px;
+margin-right:15px;
+text-align:center;
+vertical-align: text-top;
+}
+
 #venn
 {
 /* background-color: #FBD999; */
 /* overflow:hidden; */
 /* max-width: 90%; */
-margin-top:-40px;
+margin-top:-20px;
 margin-bottom:-30px;
 text-align:center;
 /* vertical-align: text-top; */
