--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -13,7 +13,7 @@ body{
 width:100%;
 min-width: 350px;
 max-width: 500px;
-max-height: 260px;
+max-height: 280px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
@@ -25,6 +25,19 @@ max-width: 100%;
 font-size: 12px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-bottom:5px; */
+text-align:center;
+vertical-align: text-top;
+}
+
+#subhed
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 13px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-style: italic;
+margin-left:15px;
+margin-right:15px;
 text-align:center;
 vertical-align: text-top;
 }
@@ -46,6 +59,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header"><h1>Charged Individuals, as a Percent of Total Arrested Individuals</h1></div>
+	<div id="subhed">Individuals arrested under the NSL or by the NSD who have since been charged, out of all individuals arrested</div>
   <div id="pieChart"></div>
   </div>
 
@@ -69,7 +83,7 @@ var pie = new d3pie("pieChart", {
 			},
 
 {
-"label": "Arrested Only",
+"label": "Arrested only",
 "value": 53,
 "color": "#03798D"
 }
@@ -127,7 +141,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-200,"right":0,"bottom":0,"left":-10} //150
+      "top":-170,"right":0,"bottom":0,"left":-10} //150
 	}
 
 });
