--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -12,7 +12,7 @@ body{
 #wrapper {
 width:100%;
 max-width: 500px;
-max-height: 230px;
+max-height: 300px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
@@ -24,6 +24,19 @@ max-width: 100%;
 font-size: 12px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-bottom:5px; */
+text-align:center;
+vertical-align: text-top;
+}
+
+#subhed
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 13px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-style: italic;
+margin-left:15px;
+margin-right:15px;
 text-align:center;
 vertical-align: text-top;
 }
@@ -44,6 +57,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header"><h1>Arrests for Speech Crimes</h1></div>
+	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSL Violations or NSD arrests</div>
   <div id="pieChart"></div>
   </div>
 
@@ -61,18 +75,18 @@ var pie = new d3pie("pieChart", {
 		// "sortOrder": "value-desc",
 		"content": [
 			{
-				"label": "Speech and other crimes",
+				"label": "Speech crimes and other crimes",
 				"value": 12,
 				"color": "#877F6A"
 			},
 			{
-	"label": "Pure speech crime",
+	"label": "Only speech crimes",
 	"value": 12,
 	"color": "#686868"
 },
 
 {
-"label": "All other arrests",
+"label": "Other arrests",
 "value": 87,
 "color": "#03798D"
 }
@@ -130,7 +144,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-170,"right":0,"bottom":0,"left":-10} //150
+      "top":-120,"right":0,"bottom":0,"left":-80} //150
 	}
 
 });
