--- a/viz/NSL/arrests_subversion_pie.html
+++ b/viz/NSL/arrests_subversion_pie.html
@@ -12,7 +12,7 @@ body{
 #wrapper {
 width:100%;
 max-width: 500px;
-max-height: 200px;
+max-height: 245px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
@@ -24,6 +24,19 @@ max-width: 100%;
 font-size: 12px;
 font-family: Georgia, Times, "Times New Roman", serif;
 /* margin-bottom:5px; */
+text-align:center;
+vertical-align: text-top;
+}
+
+#subhed
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 13px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-style: italic;
+margin-left:15px;
+margin-right:15px;
 text-align:center;
 vertical-align: text-top;
 }
@@ -44,6 +57,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header"><h1>Arrests for Subversion</h1></div>
+	<div id="subhed">Arrests for inciting, abetting, or committing subversion, in comparison with other NSL Violations or NSD arrests</div>
   <div id="pieChart"></div>
   </div>
 
@@ -125,7 +139,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-200,"right":0,"bottom":0,"left":-10} //150
+      "top":-180,"right":0,"bottom":0,"left":-10} //150
 	}
 
 });
