--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -56,6 +56,18 @@
 				vertical-align: text-top;
 				font-family: Georgia, Times, "Times New Roman", serif;
 				}
+				#subhed
+				{
+				overflow:hidden;
+				max-width: 100%;
+				font-size: 13px;
+				font-family: Georgia, Times, "Times New Roman", serif;
+				font-style: italic;
+				margin-left:15px;
+				margin-right:15px;
+				text-align:center;
+				vertical-align: text-top;
+				}
 				#graphic
 				{
 					text-align:center;
@@ -72,15 +84,15 @@
 <body>
 	<div id="wrapper">
 	<div id="header"><h1>Charges by Month</h1></div>
+	<div id="subhed">Individuals charged with violating the NSL, and individuals arrested by the NSD but not charged with NSL violations</div>
     <div id="graphic"></div>
 
     <script>
 
 var data = [{"month":"March 2021","arrests":47},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":1},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
-
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
-            top: 0,
+            top: 20,
             right: 25,
             bottom: 20,
             left: 100
