--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -15,7 +15,8 @@ body {
 
 <body>
 	<div id="wrapper">
-	<div id="header"><h1>Formal Charges</h1></div>
+	<div id="h1"><h1>Formal Charges</h1></div>
+	<div id="subhed">Individuals charged with violating the NSL, individuals arrested by the NSD and not charged under the NSL, and individuals charged with both NSL and non-NSL violations</div>
   <div id="venn"></div>
 	</div>
 </body>
@@ -33,7 +34,7 @@ margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
 }
-#header
+#h1
 {
 overflow:hidden;
 max-width: 100%;
@@ -44,13 +45,27 @@ text-align:center;
 vertical-align: text-top;
 }
 
+#subhed
+{
+overflow:hidden;
+max-width: 100%;
+font-size: 13px;
+font-family: Georgia, Times, "Times New Roman", serif;
+font-style: italic;
+margin-left:15px;
+margin-right:15px;
+text-align:center;
+vertical-align: text-top;
+}
+
+
 /* MAY NEED TO FIX TOP MARGIN HERE TO MATCH ARRESTS, DEPENDING ON HED */
 #venn
 {
 /* background-color: #FBD999; */
 /* overflow:hidden; */
 /* max-width: 90%; */
-margin-top:-40px;
+margin-top:-20px;
 margin-bottom:-30px;
 text-align:center;
 /* vertical-align: text-top; */
