--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -36,6 +36,7 @@ max-width: 100%;
 font-size: 13px;
 font-family: Georgia, Times, "Times New Roman", serif;
 font-style: italic;
+font-weight: bold;
 margin-left:15px;
 margin-right:15px;
 text-align:center;
@@ -79,7 +80,7 @@ var pie = new d3pie("pieChart", {
 			{
 				"label": "Charged",
 				"value": 58,
-				"color": "#000000"
+				"color": "#9a9179"
 			},
 
 {
