--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -8,6 +8,21 @@
 
       <style>
 
+			#subhed
+			{
+			overflow:hidden;
+			max-width: 100%;
+			font-size: 16px;
+			font-family: Georgia, Times, "Times New Roman", serif;
+			font-style: italic;
+			margin-left:15px;
+			margin-right:15px;
+			margin-bottom:15px;
+			text-align:center;
+			vertical-align: text-top;
+			}
+
+
 			body{
 					font-family: Georgia, Times, "Times New Roman", serif;
 			}
@@ -35,7 +50,7 @@
   </head>
 	<body>
 
-
+<div id="subhed">THIS IS A PLACEHOLDER THING THAT WILL CONTAIN LANGUAGE ABOUT HOW ALL OF THIS IS VERY ALLEGED WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS</div>
 	<table id="filter" class="sortable">
 
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
