--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4775,6 +4775,17 @@
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Hebei, Heilongjiang, Henan, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shandong, Shanghai, Sichuan, Tianjin, Zhejiang</td>
     </tr>
     <tr>
+      <td>Russia-China Commercial Affairs Center</td>
+      <td>俄中商务中心</td>
+      <td>Shanghai Hongqiao Business District Management Committee</td>
+      <td>上海虹桥商务区管理委员会</td>
+      <td>Russia</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2021-04-21</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Russia-China Culture, Education, Science, and Technology Development Foundation</td>
       <td>俄中文化教育科技发展基金会</td>
       <td>Hunan Department of Science and Technology</td>
