--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -13,10 +13,10 @@ body{
 width:100%;
 min-width: 350px;
 max-width: 500px;
-max-height: 280px;
+max-height: 300px;
 margin:0 auto;
 overflow:hidden;
-/* background-color: #FBD603; */
+background-color: #FBD603;
 }
 #header
 {
@@ -142,7 +142,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-170,"right":0,"bottom":0,"left":-10} //150
+      "top":-170,"right":0,"bottom":0,"left":0} //150
 	}
 
 });
