--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -16,7 +16,7 @@ max-width: 500px;
 max-height: 300px;
 margin:0 auto;
 overflow:hidden;
-background-color: #FBD603;
+/* background-color: #FBD603; */
 }
 #header
 {
