--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -43,7 +43,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header"><h1>Arrests for Foreign Connections1</h1></div>
+	<div id="header"><h1>Arrests for Foreign Connections</h1></div>
   <div id="pieChart"></div>
   </div>
 
@@ -125,7 +125,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-170,"right":0,"bottom":0,"left":-30} //150
+      "top":-170,"right":0,"bottom":0,"left":-50} //150
 	}
 
 });
