--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -42,6 +42,8 @@
 
 			tr td:nth-child(3) {text-align: center;}
 
+			tr td:nth-child(6) {text-align: center;}
+
 			td {
 					padding: 4px;
 					margin: 3px;
