--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -55,6 +55,7 @@
 				 font-size: 14px;
 				 font-weight: bold;
 				 border: 1px solid #CCC;
+				 position: sticky; top: 0;
 			}
 
       </style>
