--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -19,7 +19,7 @@
 			margin-left:15px;
 			margin-right:15px;
 			margin-bottom:15px;
-			text-align:center;
+			text-align:left;
 			vertical-align: text-top;
 			}
 
