--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -10,16 +10,17 @@
 
 			#subhed
 			{
-			overflow:hidden;
-			max-width: 100%;
-			font-size: 16px;
-			font-family: Georgia, Times, "Times New Roman", serif;
-			font-style: italic;
-			margin-left:15px;
-			margin-right:15px;
-			margin-bottom:15px;
-			text-align:center;
-			vertical-align: text-top;
+				overflow:hidden;
+				max-width: 100%;
+				font-size: 14px;
+				font-family: Arial;
+				font-style: italic;
+				font-weight: bold;
+				margin-left:15px;
+				margin-right:15px;
+				margin-bottom:15px;
+				text-align:left;
+				vertical-align: text-top;
 			}
 
 			table.tableizer-table thead {
@@ -62,13 +63,13 @@
   </head>
 	<body>
 
-<div id="subhed">THIS IS A PLACEHOLDER THING THAT WILL CONTAIN LANGUAGE ABOUT HOW ALL OF THIS IS VERY ALLEGED WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS</div>
+<div id="subhed">All actions listed are alleged by Hong Kong government entities and have not been independently verified. <br> Data cut-off date: March 15, 2021</div>
 	<table class="tableizer-table">
 
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
 
-	<thead>
-<tr><th style="width:9%">Identity                                 </th><th style="width:23%">Alleged Offenses and Background Details                                                                                                                                                                                                                                                                       </th><th style="width:9%">Arrest Date  </th><th style="width:10%">Ground(s) for Arrest (NSL Violations)                                      </th><th style="width:10%">Ground(s) for Arrest (Non-NSL Violations)                                                                                                           </th><th style="width:9%">Charge Date  </th><th style="width:10%">Charge(s) (NSL Violations)                    </th><th style="width:10%">Charge(s) (Non-NSL Violations)                                                                                                           </th><th style="width:10%">Status                                                                </th></tr>
+<thead>
+<tr><th style="width:9%">Identity                                 </th><th style="width:25%">Alleged Offenses and Background Details                                                                                                                                                                                                                                                                       </th><th style="width:9%">Arrest Date  </th><th style="width:9%">Ground(s) for Arrest (NSL Violations)                                      </th><th style="width:10%">Ground(s) for Arrest (Non-NSL Violations)                                                                                                           </th><th style="width:9%">Charge Date  </th><th style="width:10%">Charge(s) (NSL Violations)                    </th><th style="width:9%">Charge(s) (Non-NSL Violations)                                                                                                           </th><th style="width:10%">Status                                                                </th></tr>
 </thead>
 <tbody>
 <tr><td>Tong Ying-kit                            </td><td>Rode a motorcycle into a group of police officers with a flag bearing a forbidden slogan; arrested at scene of demonstration                                                                                                                                                     </td><td>2020-07-01   </td><td>Inciting or abetting secession; Terrorist action</td><td>Dangerous driving                                                                                                       </td><td>2020-07-03   </td><td>Secession; Terrorist action   </td><td>                                                                                                                        </td><td>Charged; Denied bail; Will be trialed without a jury                  </td></tr>
