--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -19,8 +19,20 @@
 				margin-left:15px;
 				margin-right:15px;
 				margin-bottom:15px;
-				text-align:left;
+				text-align:center;
 				vertical-align: text-top;
+			}
+
+			#header
+			{
+			overflow:hidden;
+			max-width: 100%;
+			font-size: 22px;
+			font-family: Arial;
+			font-weight: bold;
+			/* margin-bottom:5px; */
+			text-align:center;
+			vertical-align: text-top;
 			}
 
 			table.tableizer-table thead {
@@ -63,6 +75,7 @@
   </head>
 	<body>
 
+<div id="header">Individuals Arrested under the National Security Law or by the National Security Department</div>
 <div id="subhed">All actions listed are alleged by Hong Kong government entities and have not been independently verified. <br> Data cut-off date: March 15, 2021</div>
 	<table class="tableizer-table">
 
