--- a/viz/NSL/NSL_categories_grouped_bar1.html
+++ b/viz/NSL/NSL_categories_grouped_bar1.html
@@ -20,9 +20,10 @@ overflow:hidden;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 12px;
-font-family: Georgia, Times, "Times New Roman", serif;
-/* margin-left:5px; */
+font-size: 22px;
+font-family: Arial;
+font-weight: bold;
+/* margin-bottom:5px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -31,11 +32,12 @@ vertical-align: text-top;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 13px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 14px;
+font-family: Arial;
 font-style: italic;
 margin-left:15px;
 margin-right:15px;
+/* margin-top: -10px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -67,21 +69,21 @@ top:-80px; */
 		font-size: 13px;
 		text-align:center;
 		fill: #000;
-		font-family: Georgia, Times, "Times New Roman", serif;
+		font-family: Arial;
 }
 
 </style>
 <body>
 
 	<div id="wrapper">
-	<div id="header"><h1>Number of Individuals Arrested and/or Charged, by Type of NSL Provision</h1></div>
+	<div id="header">Number of Individuals Arrested and/or Charged, by Type of NSL Provision</div>
   <div id="chart"></div>
   </div>
 
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var margin = {top: 20, right: 20, bottom: 40, left: 20},
+var margin = {top: 30, right: 20, bottom: 40, left: 20},
     width = 350 - margin.left - margin.right,
     height = 320 - margin.top - margin.bottom;
 
@@ -206,6 +208,6 @@ d3.csv("NSL_categories_group.csv", function(error, data) {
 
 d3.select("#chart").append("div")
     .attr("class", "footnote")
-    .html("<em>Tong Ying-kit is counted twice in this chart because he was charged under both the secession and terrorism provisions.</em>");
+    .html("<em>THIS LANUGAGE NEEDS TO BE UPDATED Tong Ying-kit is counted twice in this chart because he was charged under both the secession and terrorism provisions.</em>");
 
 </script>
