--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -37,7 +37,7 @@
 						font-size: 13px;
 						fill: #000;
 						text-align:center;
-						font-family: Georgia, Times, "Times New Roman", serif;
+						font-family: Arial;
 				}
 				#wrapper
 				{
@@ -50,23 +50,24 @@
 				{
 				overflow:hidden;
 				max-width: 100%;
-				font-size: 12px;
-				/* margin-bottom:5px; */
+				font-size: 22px;
+				font-family: Arial;
+				font-weight: bold;
+				margin-bottom:5px;
 				text-align:center;
 				vertical-align: text-top;
-				font-family: Georgia, Times, "Times New Roman", serif;
 				}
 				#subhed
 				{
-				overflow:hidden;
-				max-width: 100%;
-				font-size: 13px;
-				font-family: Georgia, Times, "Times New Roman", serif;
-				font-style: italic;
-				margin-left:15px;
-				margin-right:15px;
-				text-align:center;
-				vertical-align: text-top;
+					overflow:hidden;
+					max-width: 100%;
+					font-size: 14px;
+					font-family: Arial;
+					font-style: italic;
+					margin-left:15px;
+					margin-right:15px;
+					text-align:center;
+					vertical-align: text-top;
 				}
 				#graphic
 				{
@@ -83,7 +84,7 @@
 
 <body>
 	<div id="wrapper">
-	<div id="header"><h1>Charges by Month</h1></div>
+	<div id="header">Charges by Month</div>
 	<div id="subhed">Individuals charged with violating the NSL, and individuals arrested by the NSD but not charged with NSL violations</div>
     <div id="graphic"></div>
 
