--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -169,7 +169,7 @@ var data = [{"month":"March 2021","arrests":47},{"month":"February 2021","arrest
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total number of individuals charged: 58<br><br>Tam Tak-chi was charged both in September 2020 and March 2021; only his first charge is counted here.</em>");
+    .html("<em>Total number of individuals charged: 58<br>For people who have been charged multiple times, only the first charge is counted here.</em>");
 
 
     </script>
