--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -22,8 +22,9 @@ overflow:hidden;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 12px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 22px;
+font-family: Arial;
+font-weight: bold;
 /* margin-bottom:5px; */
 text-align:center;
 vertical-align: text-top;
@@ -33,12 +34,12 @@ vertical-align: text-top;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 13px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 14px;
+font-family: Arial;
 font-style: italic;
-/* font-weight: bold; */
 margin-left:15px;
 margin-right:15px;
+/* margin-top: -10px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -59,7 +60,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header"><h1>Charged Individuals, as a Percent of Total Arrested Individuals</h1></div>
+	<div id="header">Charged Individuals</div>
 	<div id="subhed">Individuals arrested under the NSL or by the NSD who have since been charged, out of all individuals arrested</div>
   <div id="pieChart"></div>
   </div>
@@ -142,7 +143,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-170,"right":0,"bottom":0,"left":0} //150
+      "top":-180,"right":0,"bottom":0,"left":0} //150
 	}
 
 });
