--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -21,8 +21,9 @@ overflow:hidden;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 12px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 22px;
+font-family: Arial;
+font-weight: bold;
 /* margin-bottom:5px; */
 text-align:center;
 vertical-align: text-top;
@@ -32,11 +33,12 @@ vertical-align: text-top;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 13px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 14px;
+font-family: Arial;
 font-style: italic;
 margin-left:15px;
 margin-right:15px;
+/* margin-top: -10px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -56,7 +58,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header"><h1>Arrests for Speech Crimes</h1></div>
+	<div id="header">Arrests for Speech Crimes</div>
 	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSL Violations or NSD arrests</div>
   <div id="pieChart"></div>
   </div>
@@ -75,7 +77,7 @@ var pie = new d3pie("pieChart", {
 		// "sortOrder": "value-desc",
 		"content": [
 			{
-				"label": "Speech crimes and other crimes",
+				"label": "Speech and other crimes",
 				"value": 12,
 				"color": "#877F6A"
 			},
