--- a/viz/NSL/arrests_subversion_pie.html
+++ b/viz/NSL/arrests_subversion_pie.html
@@ -21,8 +21,9 @@ overflow:hidden;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 12px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 22px;
+font-family: Arial;
+font-weight: bold;
 /* margin-bottom:5px; */
 text-align:center;
 vertical-align: text-top;
@@ -32,14 +33,16 @@ vertical-align: text-top;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 13px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 14px;
+font-family: Arial;
 font-style: italic;
 margin-left:15px;
 margin-right:15px;
+/* margin-top: -10px; */
 text-align:center;
 vertical-align: text-top;
 }
+
 
 #pieChart {
 text-align:center;
@@ -56,7 +59,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header"><h1>Arrests for Subversion</h1></div>
+	<div id="header">Arrests for Subversion</div>
 	<div id="subhed">Arrests for inciting, abetting, or committing subversion, in comparison with other NSL Violations or NSD arrests</div>
   <div id="pieChart"></div>
   </div>
