--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -15,7 +15,7 @@ body {
 
 <body>
 	<div id="wrapper">
-	<div id="h1"><h1>Stated Grounds for Arrest</h1></div>
+	<div id="header">Stated Grounds for Arrest</div>
 	<div id="subhed">Individuals arrested for violating the NSL, individuals arrested by the NSD without invocation of the NSL, and individuals arrested for both NSL and non-NSL violations</div>
   <div id="venn"></div>
 	</div>
@@ -37,13 +37,14 @@ margin:0 auto;
 overflow:hidden;
 /* background-color: #FBD603; */
 }
-#h1
+#header
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 12px;
-font-family: Georgia, Times, "Times New Roman", serif;
-/* margin-left:5px; */
+font-size: 22px;
+font-family: Arial;
+font-weight: bold;
+/* margin-bottom:5px; */
 text-align:center;
 vertical-align: text-top;
 }
@@ -52,11 +53,12 @@ vertical-align: text-top;
 {
 overflow:hidden;
 max-width: 100%;
-font-size: 13px;
-font-family: Georgia, Times, "Times New Roman", serif;
+font-size: 14px;
+font-family: Arial;
 font-style: italic;
 margin-left:15px;
 margin-right:15px;
+/* margin-top: -10px; */
 text-align:center;
 vertical-align: text-top;
 }
