--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -12,10 +12,10 @@ body{
 #wrapper {
 width:100%;
 max-width: 500px;
-max-height: 230px;
+max-height: 250px;
 margin:0 auto;
 overflow:hidden;
-/* background-color: #FBD603; */
+background-color: #FBD603;
 }
 #header
 {
