--- a/viz/NSL/charges_venn.html
+++ b/viz/NSL/charges_venn.html
@@ -41,7 +41,7 @@ max-width: 100%;
 font-size: 22px;
 font-family: Arial;
 font-weight: bold;
-/* margin-bottom:5px; */
+margin-bottom:5px;
 text-align:center;
 vertical-align: text-top;
 }
