--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -15,7 +15,7 @@ max-width: 500px;
 max-height: 290px;
 margin:0 auto;
 overflow:hidden;
-background-color: #FBD603;
+/* background-color: #FBD603; */
 }
 #header
 {
