--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -81,7 +81,7 @@ var pie = new d3pie("pieChart", {
 			{
 				"label": "Charged",
 				"value": 58,
-				"color": "#9a9179"
+				"color": "#686868"
 			},
 
 {
