--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -11,11 +11,11 @@ body{
 
 #wrapper {
 width:100%;
-max-width: 500px;
-max-height: 250px;
+max-width: 320px;
+max-height: 280px;
 margin:0 auto;
 overflow:hidden;
-/* background-color: #FBD603; */
+background-color: #FBD603;
 }
 #header
 {
