--- a/viz/NSL/arrests_subversion_pie.html
+++ b/viz/NSL/arrests_subversion_pie.html
@@ -11,11 +11,11 @@ body{
 
 #wrapper {
 width:100%;
-max-width: 500px;
-max-height: 200px;
+max-width: 360px;
+max-height: 215px;
 margin:0 auto;
 overflow:hidden;
-/* background-color: #FBD603; */
+background-color: #FBD603;
 }
 #header
 {
@@ -142,7 +142,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-180,"right":0,"bottom":0,"left":-10} //150
+      "top":-180,"right":0,"bottom":0,"left":-20} //150
 	}
 
 });
