--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -11,12 +11,11 @@ body{
 
 #wrapper {
 width:100%;
-min-width: 350px;
-max-width: 500px;
-height: 220px;
+max-width: 360px;
+height: 215px;
 margin:0 auto;
 overflow:hidden;
-/* background-color: #FBD603; */
+background-color: #FBD603;
 }
 #header
 {
@@ -143,7 +142,7 @@ var pie = new d3pie("pieChart", {
 			"percentage": 100
 		},
 		"canvasPadding":{
-      "top":-180,"right":0,"bottom":0,"left":0} //150
+      "top":-180,"right":0,"bottom":0,"left":-20} //150
 	}
 
 });
