--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -11,11 +11,11 @@ body{
 
 #wrapper {
 width:100%;
-max-width: 350px;
+max-width: 380px;
 max-height: 280px;
 margin:0 auto;
 overflow:hidden;
-background-color: #FBD603;
+background-color: #346bca;
 }
 #header
 {
