--- a/viz/NSL/arrests_charges_pie.html
+++ b/viz/NSL/arrests_charges_pie.html
@@ -15,7 +15,7 @@ max-width: 360px;
 height: 215px;
 margin:0 auto;
 overflow:hidden;
-background-color: #FBD603;
+/* background-color: #FBD603; */
 }
 #header
 {
