--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -12,10 +12,10 @@ body{
 #wrapper {
 width:100%;
 max-width: 335px;
-max-height: 280px;
+max-height: 265px;
 margin:0 auto;
 overflow:hidden;
-background-color: #346bca;
+/* background-color: #346bca; */
 }
 #header
 {
@@ -83,7 +83,7 @@ var pie = new d3pie("pieChart", {
 },
 
 {
-"label": "All other arrests",
+"label": "Other arrests",
 "value": 94,
 "color": "#03798D"
 }
