--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -12,10 +12,10 @@ body{
 #wrapper {
 width:100%;
 max-width: 380px;
-max-height: 280px;
+max-height: 265px;
 margin:0 auto;
 overflow:hidden;
-background-color: #346bca;
+/* background-color: #346bca; */
 }
 #header
 {
