--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -11,11 +11,12 @@ body{
 
 #wrapper {
 width:100%;
-max-width: 430px;
+max-width: 400px;
 max-height: 290px;
 margin:0 auto;
 overflow:hidden;
-background-color: #346bca;
+/* background-color: #346bca; */
+background-color: #FBD603;
 }
 #header
 {
