--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -59,7 +59,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Arrests for Speech Crimes</div>
-	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSL Violations or NSD arrests</div>
+	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSL violations or NSD arrests</div>
   <div id="pieChart"></div>
   </div>
 
