--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -16,7 +16,7 @@ max-height: 290px;
 margin:0 auto;
 overflow:hidden;
 /* background-color: #346bca; */
-background-color: #FBD603;
+/* background-color: #FBD603; */
 }
 #header
 {
