--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -15,7 +15,8 @@ max-width: 340px;
 max-height: 265px;
 margin:0 auto;
 overflow:hidden;
-background-color: #346bca;
+/* background-color: #346bca; */
+/* background-color: #FBD603; */
 }
 #header
 {
